#
# Makefile.am for y2c_autoinst/src
#
# $Id$
#
SUBDIRS = include modules data

client_DATA = \
	autoyast.ycp \
	autoinst_tools.ycp \
	autoinst_setup.ycp \
	autoinst_init.ycp \
	autoinst_linuxrc.ycp \
	autoinst_users.ycp \
	autoinst_x11.ycp \
	autoinst_classes.ycp \
	autoinst_files.ycp \
	autoinst_sysconfig.ycp \
	autoinst_configure.ycp \
	autoinst_bootloader.ycp \
	autoinst_general.ycp \
	autoinst_scripts.ycp \
	autoinst_monitor.ycp \
	autoinst_storage.ycp \
	autoinst_software.ycp \
	autoinst_report.ycp

config_DATA = autoyast.y2cc autoinst_modules.conf

EXTRA_DIST = $(client_DATA)  $(config_DATA)
