# Sources for autoinstallation

module_DATA = \
  modules/AutoinstStorage.rb \
  modules/AutoinstPartPlan.rb \
  modules/AutoInstallRules.rb \
  modules/Y2ModuleConfig.rb \
  modules/ProfileLocation.rb \
  modules/AutoinstPartition.rb \
  modules/AutoinstClone.rb \
  modules/AutoinstImage.rb \
  modules/AutoinstConfig.rb \
  modules/Profile.rb \
  modules/AutoinstCommon.rb \
  modules/AutoinstFile.rb \
  modules/AutoinstScripts.rb \
  modules/AutoInstall.rb \
  modules/AutoinstGeneral.rb \
  modules/AutoinstSoftware.rb \
  modules/AutoinstDrive.rb \
  modules/AutoinstClass.rb \
  modules/AutoinstFunctions.rb

client_DATA = \
  clients/classes_auto.rb \
  clients/ayast_setup.rb \
  clients/scripts_auto.rb \
  clients/software_auto.rb \
  clients/general_auto.rb \
  clients/inst_autopost.rb \
  clients/storage_auto.rb \
  clients/ayast_probe.rb \
  clients/inst_autoconfigure.rb \
  clients/inst_autosetup_upgrade.rb \
  clients/autoinst_scripts2_finish.rb \
  clients/inst_autosetup.rb \
  clients/inst_autoinit.rb \
  clients/report_auto.rb \
  clients/autoinst_scripts1_finish.rb \
  clients/inst_autoimage.rb \
  clients/inst_store_upgrade_software.rb \
  clients/files_auto.rb \
  clients/autoinst_test_clone.rb \
  clients/autoyast.rb \
  clients/clone_system.rb \
  clients/autoinst_test_stage.rb

yncludedir = @yncludedir@/autoinstall
ynclude_DATA = \
  include/autoinstall/io.rb \
  include/autoinstall/wizards.rb \
  include/autoinstall/autoinst_dialogs.rb \
  include/autoinstall/classes.rb \
  include/autoinstall/types.rb \
  include/autoinstall/tree.rb \
  include/autoinstall/common.rb \
  include/autoinstall/dialogs.rb \
  include/autoinstall/ask.rb \
  include/autoinstall/xml.rb \
  include/autoinstall/script_dialogs.rb \
  include/autoinstall/conftree.rb \
  include/autoinstall/helps.rb \
  include/autoinstall/general_dialogs.rb

ylibdir = @ylibdir@/autoinstall
ylib_DATA = \
  lib/autoinstall/activate_callbacks.rb \
  lib/autoinstall/module_config_builder.rb \
  lib/autoinstall/pkg_gpg_check_handler.rb \
  lib/autoinstall/partitioning_preprocessor.rb \
  lib/autoinstall/autosetup_helpers.rb \
  lib/autoinstall/storage_proposal.rb \
  lib/autoinstall/autoinst_issues_presenter.rb \
  lib/autoinstall/autoinst_issues.rb \
  lib/autoinstall/storage_proposal_issues_presenter.rb \
  lib/autoinstall/ui_state.rb \
  lib/autoinstall/storage_controller.rb \
  lib/autoinstall/presenters.rb

ydialogsdir = @ylibdir@/autoinstall/dialogs
ydialogs_DATA = \
  lib/autoinstall/dialogs/disk_selector.rb \
  lib/autoinstall/dialogs/question.rb \
  lib/autoinstall/dialogs/storage.rb

ypresentersdir = @ylibdir@/autoinstall/presenters
ypresenters_DATA = \
  lib/autoinstall/presenters/drive.rb \
  lib/autoinstall/presenters/drive_type.rb \
  lib/autoinstall/presenters/partition.rb \
  lib/autoinstall/presenters/section.rb

ystorage_widgetsdir = @ylibdir@/autoinstall/widgets/storage
ystorage_widgets_DATA = \
  lib/autoinstall/widgets/storage/add_drive_button.rb \
  lib/autoinstall/widgets/storage/add_partition_button.rb \
  lib/autoinstall/widgets/storage/bcache_backing_attrs.rb \
  lib/autoinstall/widgets/storage/bcache_backing_for.rb \
  lib/autoinstall/widgets/storage/bcache_device.rb \
  lib/autoinstall/widgets/storage/bcache_page.rb \
  lib/autoinstall/widgets/storage/boolean_selector.rb \
  lib/autoinstall/widgets/storage/cache_mode.rb \
  lib/autoinstall/widgets/storage/chunk_size.rb \
  lib/autoinstall/widgets/storage/common_partition_attrs.rb \
  lib/autoinstall/widgets/storage/create.rb \
  lib/autoinstall/widgets/storage/create_subvolumes.rb \
  lib/autoinstall/widgets/storage/crypt_fs.rb \
  lib/autoinstall/widgets/storage/crypt_key.rb \
  lib/autoinstall/widgets/storage/delete_section_button.rb \
  lib/autoinstall/widgets/storage/disk_device.rb \
  lib/autoinstall/widgets/storage/disklabel.rb \
  lib/autoinstall/widgets/storage/disk_page.rb \
  lib/autoinstall/widgets/storage/disk_usage.rb \
  lib/autoinstall/widgets/storage/drive_page.rb \
  lib/autoinstall/widgets/storage/enable_snapshots.rb \
  lib/autoinstall/widgets/storage/encryption_attrs.rb \
  lib/autoinstall/widgets/storage/filesystem_attrs.rb \
  lib/autoinstall/widgets/storage/filesystem.rb \
  lib/autoinstall/widgets/storage/format.rb \
  lib/autoinstall/widgets/storage/fstopt.rb \
  lib/autoinstall/widgets/storage/init_drive.rb \
  lib/autoinstall/widgets/storage/keep_unknown_lv.rb \
  lib/autoinstall/widgets/storage/label.rb \
  lib/autoinstall/widgets/storage/lvm_group.rb \
  lib/autoinstall/widgets/storage/lvm_page.rb \
  lib/autoinstall/widgets/storage/lvm_partition_attrs.rb \
  lib/autoinstall/widgets/storage/lvm_pv_attrs.rb \
  lib/autoinstall/widgets/storage/lv_name.rb \
  lib/autoinstall/widgets/storage/md_level.rb \
  lib/autoinstall/widgets/storage/mkfs_options.rb \
  lib/autoinstall/widgets/storage/mountby.rb \
  lib/autoinstall/widgets/storage/mount.rb \
  lib/autoinstall/widgets/storage/not_lvm_partition_attrs.rb \
  lib/autoinstall/widgets/storage/overview_tree_pager.rb \
  lib/autoinstall/widgets/storage/overview_tree.rb \
  lib/autoinstall/widgets/storage/parity_algorithm.rb \
  lib/autoinstall/widgets/storage/partition_general_tab.rb \
  lib/autoinstall/widgets/storage/partition_id.rb \
  lib/autoinstall/widgets/storage/partition_nr.rb \
  lib/autoinstall/widgets/storage/partition_page.rb \
  lib/autoinstall/widgets/storage/partition_tab.rb \
  lib/autoinstall/widgets/storage/partition_type.rb \
  lib/autoinstall/widgets/storage/partition_usage_tab.rb \
  lib/autoinstall/widgets/storage/pesize.rb \
  lib/autoinstall/widgets/storage/pool.rb \
  lib/autoinstall/widgets/storage/raid_attrs.rb \
  lib/autoinstall/widgets/storage/raid_name.rb \
  lib/autoinstall/widgets/storage/raid_page.rb \
  lib/autoinstall/widgets/storage/resize.rb \
  lib/autoinstall/widgets/storage/size.rb \
  lib/autoinstall/widgets/storage/size_selector.rb \
  lib/autoinstall/widgets/storage/stripesize.rb \
  lib/autoinstall/widgets/storage/stripes.rb \
  lib/autoinstall/widgets/storage/used_as.rb \
  lib/autoinstall/widgets/storage/used_pool.rb \
  lib/autoinstall/widgets/storage/uuid.rb \
  lib/autoinstall/widgets/storage/vg_device.rb

yclientsdir = @ylibdir@/autoinstall/clients
yclients_DATA = \
  lib/autoinstall/clients/ayast_probe.rb \
  lib/autoinstall/clients/ayast_setup.rb

ycautoinst_issuesdir = @ylibdir@/autoinstall/autoinst_issues
ycautoinst_issues_DATA = \
  lib/autoinstall/autoinst_issues/invalid_value.rb \
  lib/autoinstall/autoinst_issues/issue.rb \
  lib/autoinstall/autoinst_issues/list.rb \
  lib/autoinstall/autoinst_issues/missing_value.rb

scrconf_DATA = \
  scrconf/cfg_autoinstall.scr \
  scrconf/autoinstall.scr

schemafilesdir = $(schemadir)/autoyast/rnc
schemafiles_DATA = \
  autoyast-rnc/scripts.rnc \
  autoyast-rnc/rules.rnc \
  autoyast-rnc/common.rnc \
  autoyast-rnc/pxe.rnc \
  autoyast-rnc/classes-use.rnc \
  autoyast-rnc/classes-decl.rnc \
  autoyast-rnc/software.rnc \
  autoyast-rnc/reporting.rnc \
  autoyast-rnc/partitioning.rnc \
  autoyast-rnc/profile-misc.rnc \
  autoyast-rnc/general.rnc \
  autoyast-rnc/files.rnc

ybin_SCRIPTS = \
  bin/autoyast-initscripts.sh \
  bin/fetch_image.sh

desktop_DATA = \
  desktop/autoyast.desktop \
  desktop/clone_system.desktop

fillup_DATA = \
  fillup/sysconfig.autoinstall

symbolicdir = @icondir@/hicolor/symbolic/apps
symbolic_DATA = \
  icons/hicolor/symbolic/apps/yast-autoyast-symbolic.svg \
  icons/hicolor/symbolic/apps/yast-files-symbolic.svg \
  icons/hicolor/symbolic/apps/yast-general-symbolic.svg \
  icons/hicolor/symbolic/apps/yast-report-symbolic.svg \
  icons/hicolor/symbolic/apps/yast-scripts-symbolic.svg

scalabledir = @icondir@/hicolor/scalable/apps
scalable_DATA = \
  icons/hicolor/scalable/apps/yast-autoyast.svg \
  icons/hicolor/scalable/apps/yast-files.svg \
  icons/hicolor/scalable/apps/yast-general.svg \
  icons/hicolor/scalable/apps/yast-report.svg \
  icons/hicolor/scalable/apps/yast-scripts.svg


EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(schemafiles_DATA) $(ybin_SCRIPTS) $(desktop_DATA) $(fillup_DATA) $(ylib_DATA) $(ydialogs_DATA) $(yclients_DATA) $(symbolic_DATA) $(scalable_DATA)

include $(top_srcdir)/Makefile.am.common
