#
# Makefile.am for autoinstallation/test
#

TESTS = \
    AutoInstallRules_test.rb \
    AutoInstall_test.rb \
    AutoinstClass_test.rb \
    AutoinstConfig_tests.rb \
    AutoinstFunctions_test.rb \
    AutoinstGeneral_test.rb \
    AutoinstPartition_test.rb \
    AutoinstPartPlan_test.rb \
    AutoinstSoftware_test.rb \
    autoinst_storage_test.rb \
    profile_test.rb \
    Y2ModuleConfig_test.rb \
    include/autopart_test.rb \
    include/ask_test.rb \
    lib/module_config_builder_test.rb \
    lib/pkg_gpg_check_handler_test.rb \
    lib/storage_proposal_issues_presenter_test.rb \
    lib/storage_proposal_test.rb \
    lib/dialogs/question_test.rb

TEST_EXTENSIONS = .rb
RB_LOG_COMPILER = rspec
VERBOSE = 1
EXTRA_DIST = $(TESTS)

