#
# Makefile.am for y2c_autoinst/src
#
# $Id$
#
client_DATA = \
    autoyast.ycp \
    classes_auto.ycp \
    files_auto.ycp \
    general_auto.ycp \
    inst_autoconfigure.ycp \
    inst_autoimage.ycp \
    inst_autoinit.ycp \
    inst_autopost.ycp \
    inst_autosetup.ycp \
    report_auto.ycp \
    scripts_auto.ycp \
    software_auto.ycp \
    storage_auto.ycp		\
	autoinst_scripts1_finish.ycp	\
	autoinst_scripts2_finish.ycp \
	ayast_probe.ycp \
	clone_system.ycp\
    online_update_auto.ycp


EXTRA_DIST =                    \
	$(client_DATA)


include $(top_srcdir)/Makefile.am.common
