#
# Makefile.am for y2c_autoinst/src/config
#
# $Id$
#

modconfigdir = $(prefix)/share/autoinstall/modules
modconfig_DATA = \
	partitioning.desktop \
	general.desktop \
	report.desktop \
	scripts.desktop \
	software.desktop \
	files.desktop

desktop_DATA = autoyast.desktop

EXTRA_DIST =  $(desktop_DATA) $(modconfig_DATA)

