#
# Makefile.am for y2m_autoinst/src/include
#

yncludedir = @yncludedir@/autoinstall

ynclude_DATA =  \
    autopart.ycp \
    classes.ycp \
    conftree.ycp \
    io.ycp \
    wizards.ycp \
    xml.ycp


EXTRA_DIST =                    \
	$(ynclude_DATA)


include $(top_srcdir)/Makefile.am.common
