#
# Makefile.am for y2c_autoinst/src
#
# $Id: Makefile.am 15516 2004-03-05 15:40:36Z nashif $
#
controldir = $(yast2dir)/control

client_DATA = \
    autoinst_test_clone.ycp \
    autoinst_test_stage.ycp

control_DATA = \
    control_continue_autoyast.xml

EXTRA_DIST =                    \
	$(client_DATA) $(control_DATA)


include $(top_srcdir)/Makefile.am.common
