#
# Makefile.am for y2c_autoinst/src
#
# $Id$
#

rncdir = $(prefix)/share/autoinstall/rnc

rnc_DATA = \
	bootloader.rnc \
	fw.rnc \
	inetd.rnc \
	ldap_client.rnc \
	lvm.rnc \
	mail.rnc \
	networking.rnc \
	nis.rnc \
	nis_server.rnc \
	ntpclient.rnc \
	online_update.rnc \
	printer.rnc \
	profile-misc.rnc \
	raid.rnc \
	reporting.rnc \
	runlevels.rnc \
	samba.rnc \
	security.rnc \
	sound.rnc \
	sysconfig.rnc \
	users.rnc \
	x11.rnc

EXTRA_DIST = $(rnc_DATA) 
