#
# Makefile.am for y2c_autoinst/src
#
# $Id$
#

# THESE FILES ARE NOT USED
# and should be moved to their respective modules,
# see /usr/share/doc/packages/yast2-schema/yast2-schema

# see also ../../schema

rncdir = $(prefix)/share/autoinstall/rnc

rnc_DATA = \
	bootloader.rnc \
	mail.rnc \
	online_update.rnc \
	printer.rnc \
	samba.rnc \
	sound.rnc \
	sysconfig.rnc

EXTRA_DIST = $(rnc_DATA) 
