#
# Makefile.am for y2c_autoinst/src
#
# $Id$
#

# THESE FILES ARE NOT USED
# and should be moved to their respective modules,
# see /usr/share/doc/packages/yast2-schema/yast2-schema

# see also ../../schema

rncdir = $(prefix)/share/autoinstall/rnc

rnc_DATA = \
	bootloader.rnc \
	fw.rnc \
	inetd.rnc \
	ldap_client.rnc \
	lvm.rnc \
	nis.rnc \
	nis_server.rnc \
	ntpclient.rnc \
	online_update.rnc \
	printer.rnc \
	raid.rnc \
	runlevels.rnc \
	samba.rnc \
	security.rnc \
	sound.rnc \
	sysconfig.rnc \
	users.rnc \
	x11.rnc

EXTRA_DIST = $(rnc_DATA) 
